# periodfind

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  MANIFEST.in  README.md  mkdocs.yml  pyproject.toml  setup.py
.github/workflows/: docs.yml  tests.yml
benchmarks/: plot_throughput.py  run_bench.sh  throughput_bench.py  throughput_results.csv  throughput_results_1gpu.csv  throughput_results_2gpu.csv
docs/: benchmarks.md  index.md  requirements.txt
docs/api/: core.md  cpu.md  gpu.md  index.md  utils.md
docs/getting-started/: installation.md  quickstart.md
docs/user-guide/: algorithms.md
periodfind/: __init__.py  _utils.py  aov.cpp  aov.pyx  bls.cpp  bls.pyx  ce.cpp  ce.pyx  fpw.cpp  fpw.pyx  ls.cpp  ls.pyx  mf.cpp  mf.pyx  mhf.pyx  vn.cpp  vn.pyx
periodfind/cpu/: __init__.py
periodfind/cuda/: aov.cu  aov.h  bls.cu  bls.h  ce.cu  ce.h  errchk.cuh  fpw.cu  fpw.h  ls.cu  ls.h  mf.cu  mf.h  mhf.cu  mhf.h  vn.cu  vn.h
periodfind/gpu/: __init__.py
rust/: Cargo.toml  README.md  pyproject.toml
rust/src/: aov.rs  basicstats.rs  bls.rs  ce.rs  dmdt.rs  fold.rs  fourier.rs  fpw.rs  highcadence.rs  lib.rs  ls.rs  mf.rs  mhf.rs  peaks.rs  vn.rs
tests/: bench_cpu_vs_cuda.py  bench_cuda_opts.py  test_batch_features.py  test_cpu_standalone.py  test_cpu_vs_cuda.py  test_fourier.py  test_periodfind.py
