[build-system]
requires = ["setuptools>=42", "wheel", "cython", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "periodfind"
version = "0.0.6"
description = "GPU-accelerated period finding utilities"
readme = "README.md"
license = "BSD-3-Clause"
requires-python = ">=3.8"
authors = [
    {name = "Ethan Jaszewski", email = "ethanjaszewski@yahoo.com"},
]
keywords = ["astronomy"]
classifiers = [

    "Operating System :: POSIX :: Linux",
    "Programming Language :: C++",
    "Programming Language :: Cython",
    "Programming Language :: Python :: 3",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Environment :: GPU :: NVIDIA CUDA",
]
dependencies = [
    "cython",
    "numpy",
]

[project.urls]
Homepage = "https://github.com/ZwickyTransientFacility/periodfind"
