[build-system]
requires = ["setuptools>=42", "wheel", "cython", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "periodfind"
version = "0.0.6"
description = "GPU-accelerated period finding utilities"
readme = "README.md"
license = "BSD-3-Clause"
requires-python = ">=3.8"
authors = [
    {name = "Ethan Jaszewski", email = "ethanjaszewski@yahoo.com"},
]
keywords = ["astronomy"]
classifiers = [

    "Operating System :: POSIX :: Linux",
    "Programming Language :: C++",
    "Programming Language :: Cython",
    "Programming Language :: Python :: 3",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Environment :: GPU :: NVIDIA CUDA",
]
dependencies = [
    "cython",
    "numpy",
]

[project.urls]
Homepage = "https://github.com/ZwickyTransientFacility/periodfind"

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
pythonpath = ["."]

# ---------------------------------------------------------------------------
# Ruff
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py38"
line-length = 100
exclude = ["env", "build", "dist", "*.egg-info"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
]
ignore = [
    "E501",  # line too long (let ruff-format handle it)
    "E741",  # ambiguous variable name (common in scientific code)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E402"]      # imports after try/except guards are intentional
"tests/bench_*" = ["B023"] # lambda loop-var capture is fine in benchmarks

[tool.ruff.lint.isort]
known-first-party = ["periodfind"]
