[build-system]
requires = ["maturin>=1.0"]
build-backend = "maturin"

[project]
name = "periodfind_cpu"
version = "0.1.0"
description = "CPU backends for periodfind period-finding algorithms"
readme = "README.md"
license = {text = "BSD-3-Clause"}
requires-python = ">=3.8"
authors = [
    {name = "Ethan Jaszewski", email = "ethanjaszewski@yahoo.com"},
    {name = "Michael Coughlin", email = "cough052@umn.edu"},
]
keywords = ["astronomy"]
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Astronomy",
]

[project.urls]
Homepage = "https://github.com/ZwickyTransientFacility/periodfind"

[tool.maturin]
